[MINDEXER-116] Java 8 sugar + fix IDE warnings